packages/rocket/rocket-0.4.10/core/codegen/tests/ui-fail/typed-uri-bad-type.stderr
error[E0277]: the trait bound `usize: FromUriParam<rocket::http::uri::Path, &str>` is not satisfied
  --> $DIR/typed-uri-bad-type.rs:50:23
   |
50 |     uri!(simple: id = "hi");
   |                       ^^^^ the trait `FromUriParam<rocket::http::uri::Path, &str>` is not implemented for `usize`
   |
   = help: the following implementations were found:
             <usize as FromUriParam<P, &'x mut usize>>
             <usize as FromUriParam<P, &'x usize>>
             <usize as FromUriParam<P, usize>>
   = note: required by `from_uri_param`

error[E0277]: the trait bound `usize: FromUriParam<rocket::http::uri::Path, &str>` is not satisfied
  --> $DIR/typed-uri-bad-type.rs:53:18
   |
53 |     uri!(simple: "hello");
   |                  ^^^^^^^ the trait `FromUriParam<rocket::http::uri::Path, &str>` is not implemented for `usize`
   |
   = help: the following implementations were found:
             <usize as FromUriParam<P, &'x mut usize>>
             <usize as FromUriParam<P, &'x usize>>
             <usize as FromUriParam<P, usize>>
   = note: required by `from_uri_param`

error[E0277]: the trait bound `usize: FromUriParam<rocket::http::uri::Path, i64>` is not satisfied
  --> $DIR/typed-uri-bad-type.rs:56:23
   |
56 |     uri!(simple: id = 239239i64);
   |                       ^^^^^^^^^ the trait `FromUriParam<rocket::http::uri::Path, i64>` is not implemented for `usize`
   |
   = help: the following implementations were found:
             <usize as FromUriParam<P, &'x mut usize>>
             <usize as FromUriParam<P, &'x usize>>
             <usize as FromUriParam<P, usize>>
   = note: required by `from_uri_param`

error[E0277]: the trait bound `S: FromUriParam<rocket::http::uri::Path, _>` is not satisfied
  --> $DIR/typed-uri-bad-type.rs:59:31
   |
59 |     uri!(not_uri_display: 10, S);
   |                               ^ the trait `FromUriParam<rocket::http::uri::Path, _>` is not implemented for `S`
   |
   = note: required by `from_uri_param`

error[E0277]: the trait bound `i32: FromUriParam<rocket::http::uri::Path, Option<{integer}>>` is not satisfied
  --> $DIR/typed-uri-bad-type.rs:65:26
   |
65 |     uri!(optionals: id = Some(10), name = Ok("bob".into()));
   |                          ^^^^ the trait `FromUriParam<rocket::http::uri::Path, Option<{integer}>>` is not implemented for `i32`
   |
   = help: the following implementations were found:
             <i32 as FromUriParam<P, &'x i32>>
             <i32 as FromUriParam<P, &'x mut i32>>
             <i32 as FromUriParam<P, i32>>
   = note: required because of the requirements on the impl of `FromUriParam<rocket::http::uri::Path, Option<{integer}>>` for `Option<i32>`
   = note: required by `from_uri_param`

error[E0277]: the trait bound `std::string::String: FromUriParam<rocket::http::uri::Path, Result<_, _>>` is not satisfied
  --> $DIR/typed-uri-bad-type.rs:65:43
   |
65 |     uri!(optionals: id = Some(10), name = Ok("bob".into()));
   |                                           ^^ the trait `FromUriParam<rocket::http::uri::Path, Result<_, _>>` is not implemented for `std::string::String`
   |
   = help: the following implementations were found:
             <std::string::String as FromUriParam<P, &'a str>>
             <std::string::String as FromUriParam<P, &'x &'a str>>
             <std::string::String as FromUriParam<P, &'x mut &'a str>>
             <std::string::String as FromUriParam<P, &'x mut std::string::String>>
           and 2 others
   = note: required because of the requirements on the impl of `FromUriParam<rocket::http::uri::Path, Result<_, _>>` for `Result<std::string::String, &RawStr>`
   = note: required by `from_uri_param`

error[E0277]: the trait bound `isize: FromUriParam<rocket::http::uri::Query, &str>` is not satisfied
  --> $DIR/typed-uri-bad-type.rs:69:20
   |
69 |     uri!(simple_q: "hi");
   |                    ^^^^ the trait `FromUriParam<rocket::http::uri::Query, &str>` is not implemented for `isize`
   |
   = help: the following implementations were found:
             <isize as FromUriParam<P, &'x isize>>
             <isize as FromUriParam<P, &'x mut isize>>
             <isize as FromUriParam<P, isize>>
   = note: required by `from_uri_param`

error[E0277]: the trait bound `isize: FromUriParam<rocket::http::uri::Query, &str>` is not satisfied
  --> $DIR/typed-uri-bad-type.rs:72:25
   |
72 |     uri!(simple_q: id = "hi");
   |                         ^^^^ the trait `FromUriParam<rocket::http::uri::Query, &str>` is not implemented for `isize`
   |
   = help: the following implementations were found:
             <isize as FromUriParam<P, &'x isize>>
             <isize as FromUriParam<P, &'x mut isize>>
             <isize as FromUriParam<P, isize>>
   = note: required by `from_uri_param`

error[E0277]: the trait bound `S: FromUriParam<rocket::http::uri::Query, _>` is not satisfied
  --> $DIR/typed-uri-bad-type.rs:75:24
   |
75 |     uri!(other_q: 100, S);
   |                        ^ the trait `FromUriParam<rocket::http::uri::Query, _>` is not implemented for `S`
   |
   = note: required by `from_uri_param`

error[E0277]: the trait bound `S: FromUriParam<rocket::http::uri::Query, _>` is not satisfied
  --> $DIR/typed-uri-bad-type.rs:78:26
   |
78 |     uri!(other_q: rest = S, id = 100);
   |                          ^ the trait `FromUriParam<rocket::http::uri::Query, _>` is not implemented for `S`
   |
   = note: required by `from_uri_param`

error[E0277]: the trait bound `S: Ignorable<rocket::http::uri::Query>` is not satisfied
   --> $DIR/typed-uri-bad-type.rs:42:29
    |
42  | fn other_q(id: usize, rest: S) {  }
    |                             ^ the trait `Ignorable<rocket::http::uri::Query>` is not implemented for `S`
...
81  |     uri!(other_q: rest = _, id = 100);
    |     ---------------------------------- in this macro invocation
    |
   ::: $WORKSPACE/core/http/src/uri/uri_display.rs
    |
    | pub fn assert_ignorable<P: UriPart, T: Ignorable<P>>() {  }
    |                                        ------------ required by this bound in `assert_ignorable`
    |
    = note: this error originates in the macro `rocket_uri_macro_other_q` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `usize: Ignorable<rocket::http::uri::Query>` is not satisfied
   --> $DIR/typed-uri-bad-type.rs:42:16
    |
42  | fn other_q(id: usize, rest: S) {  }
    |                ^^^^^ the trait `Ignorable<rocket::http::uri::Query>` is not implemented for `usize`
...
83  |     uri!(other_q: rest = S, id = _);
    |     -------------------------------- in this macro invocation
    |
   ::: $WORKSPACE/core/http/src/uri/uri_display.rs
    |
    | pub fn assert_ignorable<P: UriPart, T: Ignorable<P>>() {  }
    |                                        ------------ required by this bound in `assert_ignorable`
    |
    = note: this error originates in the macro `rocket_uri_macro_other_q` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `S: FromUriParam<rocket::http::uri::Query, _>` is not satisfied
  --> $DIR/typed-uri-bad-type.rs:83:26
   |
83 |     uri!(other_q: rest = S, id = _);
   |                          ^ the trait `FromUriParam<rocket::http::uri::Query, _>` is not implemented for `S`
   |
   = note: required by `from_uri_param`
